--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,22 +26,22 @@
     </header>
     <section class="hero"></section>
     <section class="content">
-        <article>
-            <img src="./assets/images/search-engine-optimization.jpg" alt="An open notebook with notes about search engine optimation."/>
+        <article id="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="An open notebook with notes about search engine optimation." class="img-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" >
-            <img src="./assets/images/online-reputation-management.jpg" alt="Someone looking at charts about their reputation a laptop" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Someone looking at charts about their reputation a laptop" class="img-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" >
-            <img src="./assets/images/social-media-marketing.jpg" alt="A team working on their social media marketing plan"/>
+            <img src="./assets/images/social-media-marketing.jpg" alt="A team working on their social media marketing plan" class="img-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
